# Cosmetics-Agent

./: .gitignore  README.md  agent_techniques.md  learning.md  pyproject.toml
data/: eval_dataset.jsonl  knowledge_base.jsonl
src/cosmetics_agent/: __init__.py  agent.py  catalog.py  cli.py  config.py  evals.py  formatter.py  guardrails.py  knowledge_enrichment.py  knowledge_review.py  llm.py  memory.py  models.py  multi_agent.py  parser.py  rag.py  recommender.py  research.py  toolbox.py  vector_store.py  webapp.py
src/cosmetics_agent/web/: app.css  app.js  index.html
