[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmetics-agent"
version = "0.1.0"
description = "A local CLI beauty advisor agent for skincare and makeup recommendations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = [
  "chromadb>=0.5.23,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
cosmetics-agent = "cosmetics_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cosmetics_agent = ["web/*"]
